Adding i18n to the error handling